--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "احسب استهلاك المنزل بالكامل من الكهرباء والمياه على أساس يومي وشهري وسنوي، كما يمكنك الاطلاع على إحصائيات استهلاك الأجهزة الفردية، ونسبة استهلاك الطاقة لكل جهاز خلال الفترة المحددة، والاستهلاك الكلي والفردي للطاقة.",
     "smart_support_helps_3": "3.استكشاف الأخطاء وإصلاحها",
     "CL_SL_CM_about_usage_month_desc": "البيانات المعروضة هي تقديرات، وليست قياسات دقيقة.\n تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذا قد تختلف نتائجك الفعلية.\n يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة.",
-    "CL_CF_HP_no_card_key": "لا يوجد بطاقة"
+    "CL_CF_HP_no_card_key": "لا يوجد بطاقة",
+    "CL_CF_TV_new_to_connectlife": "جديد في Connectlife",
+    "CL_CF_TV_scan_with_cl": "المسح الضوئي باستخدام تطبيق ConnectLife للجوال",
+    "CL_CF_AS_or": "أو",
+    "CL_CF_AS_report_an_issue": "الإبلاغ عن مشكلة.",
+    "CL_DV_OV_adjust_time": "ضبط الوقت",
+    "CL_CF_CS_window_air_blue_cs_1": "اضغط مع الاستمرار على الزر #### لمدة 3-6 ثوانٍ تقريبًا حتى تسمع صوت صفير.",
+    "CL_CF_CS_window_air_blue_cs_2": "تأكد من أن شاشة الجهاز تعرض الرقم \"77\"، مما يشير إلى أن الوحدة في وضع الاقتران. إذا لم يكن الأمر كذلك، فيرجى تكرار الخطوة 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "اضغط مع الاستمرار على أيقونة ## لمدة 6 ثوان تقريبا. يجب أن تصدر الوحدة صوتا ويجب أن يبدأ ضوء Wi-Fi في الوميض.",
+    "CL_CF_HP_discover": "يكتشف",
+    "CL_DV_HOB_cooking_assist": "مساعدة في الطبخ",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "اختر طراز الجهاز",
+    "CL_CF_FM_all_purchases_added_to_rf": "لقد تم إضافة جميع مشترياتك إلى الثلاجة"
 }
