--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Υπολογίστε την κατανάλωση ενέργειας και νερού ολόκληρου του σπιτιού σε ημερήσια, μηνιαία και ετήσια βάση. Μπορείτε επίσης να δείτε τα στατιστικά στοιχεία κατανάλωσης μεμονωμένων συσκευών, το ποσοστό κατανάλωσης ενέργειας κάθε συσκευής εντός της επιλεγμένης περιόδου, τη συνολική και μεμονωμένη κατανάλωση ενέργειας.",
     "smart_support_helps_3": "3. Αντιμετώπιση προβλημάτων",
     "CL_SL_CM_about_usage_month_desc": "Τα δεδομένα που εμφανίζονται είναι εκτιμήσεις και όχι ακριβείς μετρήσεις.\n Οι εκτιμήσεις μας βασίζονται σε ελεγχόμενες δοκιμές, επομένως τα πραγματικά σας αποτελέσματα ενδέχεται να διαφέρουν.\n Η χρήση ενέργειας στον πραγματικό κόσμο εξαρτάται από το συγκεκριμένο περιβάλλον και τις συνήθειές σας.",
-    "CL_CF_HP_no_card_key": "Χωρίς κάρτα"
+    "CL_CF_HP_no_card_key": "Χωρίς κάρτα",
+    "CL_CF_TV_new_to_connectlife": "ΝΕΟ ΣΤΟ CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Σάρωση με την εφαρμογή ConnectLife για κινητά",
+    "CL_CF_AS_or": "ή",
+    "CL_CF_AS_report_an_issue": "αναφέρετε ένα ζήτημα.",
+    "CL_DV_OV_adjust_time": "Προσαρμόστε την ώρα",
+    "CL_CF_CS_window_air_blue_cs_1": "Πατήστε και κρατήστε πατημένο το κουμπί #### για περίπου. 3-6 δευτερόλεπτα μέχρι να ακούσετε ένα ηχητικό σήμα.",
+    "CL_CF_CS_window_air_blue_cs_2": "Βεβαιωθείτε ότι η οθόνη της συσκευής δείχνει \"77\", υποδεικνύοντας ότι η μονάδα βρίσκεται σε λειτουργία σύζευξης. Εάν όχι, επαναλάβετε το βήμα 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Πατήστε παρατεταμένα το εικονίδιο ## για περίπου. 6 δευτερόλεπτα. Η μονάδα θα πρέπει να ηχήσει και η λυχνία Wi-Fi θα αρχίσει να αναβοσβήνει.",
+    "CL_CF_HP_discover": "Ανακαλύπτω",
+    "CL_DV_HOB_cooking_assist": "Βοηθός Μαγειρικής",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ΕΠΙΛΕΞΤΕ ΤΟ ΜΟΝΤΕΛΟ ΣΥΣΚΕΥΗΣ",
+    "CL_CF_FM_all_purchases_added_to_rf": "Όλες οι αγορές σας έχουν προστεθεί στο ψυγείο"
 }
