--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "کل برق و آب مصرفی خانه را به صورت روزانه، ماهانه و سالانه محاسبه کنید. همچنین می توانید آمار مصرف تک تک دستگاه ها، نسبت مصرف انرژی هر دستگاه در بازه زمانی انتخاب شده، مصرف انرژی کلی و فردی را مشاهده کنید.",
     "smart_support_helps_3": "3. عیب یابی",
     "CL_SL_CM_about_usage_month_desc": "داده های نشان داده شده تخمین هستند، نه اندازه گیری دقیق.\n تخمین های ما بر اساس آزمایش های کنترل شده است، بنابراین نتایج واقعی شما ممکن است متفاوت باشد.\n مصرف انرژی در دنیای واقعی به محیط و عادات خاص شما بستگی دارد.",
-    "CL_CF_HP_no_card_key": "بدون کارت"
+    "CL_CF_HP_no_card_key": "بدون کارت",
+    "CL_CF_TV_new_to_connectlife": "جدید برای CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "با برنامه موبایل ConnectLife اسکن کنید",
+    "CL_CF_AS_or": "یا",
+    "CL_CF_AS_report_an_issue": "گزارش یک مشکل",
+    "CL_DV_OV_adjust_time": "زمان را تنظیم کنید",
+    "CL_CF_CS_window_air_blue_cs_1": "دکمه #### را برای حدودا فشار دهید و نگه دارید. 3-6 ثانیه تا زمانی که صدای بوق را بشنوید.",
+    "CL_CF_CS_window_air_blue_cs_2": "بررسی کنید که صفحه نمایش دستگاه \"77\" را نشان دهد که نشان می دهد دستگاه در حالت جفت شدن است. اگر نه، لطفا مرحله 2 را تکرار کنید.",
+    "CL_CF_CS_window_ac_normal_step_2": "نماد ‎‏‎\"‎‏Wi-Fi\" را فشار دهید و نگه دارید.",
+    "CL_CF_HP_discover": "کشف کنید",
+    "CL_DV_HOB_cooking_assist": "کمک آشپزی",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "مدل دستگاه را انتخاب کنید",
+    "CL_CF_FM_all_purchases_added_to_rf": "تمامی خریدهای شما به یخچال اضافه شده است"
 }
