--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Calculez la consommation d'électricité et d'eau de toute la maison sur une base quotidienne, mensuelle et annuelle. Vous pouvez également consulter les statistiques de consommation des appareils individuels, la proportion de consommation d'énergie de chaque appareil au cours de la période sélectionnée, la consommation d'énergie globale et individuelle.",
     "smart_support_helps_3": "3. Dépannage",
     "CL_SL_CM_about_usage_month_desc": "Les données présentées sont des estimations et non des mesures exactes.\n Nos estimations sont basées sur des tests contrôlés, vos résultats réels peuvent donc varier.\n La consommation d’énergie réelle dépend de votre environnement et de vos habitudes spécifiques.",
-    "CL_CF_HP_no_card_key": "Pas de carte"
+    "CL_CF_HP_no_card_key": "Pas de carte",
+    "CL_CF_TV_new_to_connectlife": "NOUVEAU SUR CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Scannez avec l'application mobile ConnectLife",
+    "CL_CF_AS_or": "ou",
+    "CL_CF_AS_report_an_issue": "signaler un problème.",
+    "CL_DV_OV_adjust_time": "Ajuster l'heure",
+    "CL_CF_CS_window_air_blue_cs_1": "Appuyez sur le bouton #### et maintenez-le enfoncé pendant environ 3 à 6 secondes jusqu'à ce que vous entendiez un bip.",
+    "CL_CF_CS_window_air_blue_cs_2": "Vérifiez que l'écran de l'appareil affiche « 77 », ce qui indique que l'appareil est en mode d'appairage. Si ce n'est pas le cas, répétez l'étape 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Appuyez et maintenez l'icône ## pendant env. 6 secondes. L'appareil doit émettre un bip et le voyant Wi-Fi doit commencer à clignoter.",
+    "CL_CF_HP_discover": "Découvrir",
+    "CL_DV_HOB_cooking_assist": "Aide à la cuisine",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "CHOISISSEZ LE MODÈLE D'APPAREIL",
+    "CL_CF_FM_all_purchases_added_to_rf": "Tous vos achats ont été ajoutés au réfrigérateur"
 }
