--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "पूरे घर की बिजली और पानी की खपत की गणना दैनिक, मासिक और वार्षिक आधार पर करें। आप अलग-अलग डिवाइस की खपत के आँकड़े, चयनित अवधि के भीतर प्रत्येक डिवाइस की ऊर्जा खपत का अनुपात, समग्र और व्यक्तिगत ऊर्जा खपत भी देख सकते हैं।",
     "smart_support_helps_3": "3. समस्या निवारण",
     "CL_SL_CM_about_usage_month_desc": "दिखाए गए आंकड़े अनुमान हैं, सटीक माप नहीं।\n हमारे अनुमान नियंत्रित परीक्षणों पर आधारित हैं, इसलिए आपके वास्तविक परिणाम भिन्न हो सकते हैं।\n वास्तविक विश्व में ऊर्जा का उपयोग आपके विशिष्ट वातावरण और आदतों पर निर्भर करता है।",
-    "CL_CF_HP_no_card_key": "कोई कार्ड नहीं"
+    "CL_CF_HP_no_card_key": "कोई कार्ड नहीं",
+    "CL_CF_TV_new_to_connectlife": "कनेक्टलाइफ़ में नया",
+    "CL_CF_TV_scan_with_cl": "कनेक्टलाइफ मोबाइल ऐप से स्कैन करें",
+    "CL_CF_AS_or": "या",
+    "CL_CF_AS_report_an_issue": "किसी समस्या की रिपोर्ट करें.",
+    "CL_DV_OV_adjust_time": "समय समायोजित करें",
+    "CL_CF_CS_window_air_blue_cs_1": "#### बटन को लगभग 3-6 सेकंड तक दबाकर रखें जब तक कि आपको बीप की आवाज न सुनाई दे।",
+    "CL_CF_CS_window_air_blue_cs_2": "जाँच करें कि डिवाइस डिस्प्ले पर \"77\" दिख रहा है, जो दर्शाता है कि यूनिट पेयरिंग मोड में है। यदि नहीं, तो कृपया चरण 2 को दोहराएँ।",
+    "CL_CF_CS_window_ac_normal_step_2": "\"कनेक्ट\" बटन को लगभग 6 सेकंड तक दबाकर रखें। यूनिट बीप करेगी और वाई-फाई लाइट चमकने लगेगी।",
+    "CL_CF_HP_discover": "खोज करना",
+    "CL_DV_HOB_cooking_assist": "खाना पकाने में सहायता",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "डिवाइस मॉडल चुनें",
+    "CL_CF_FM_all_purchases_added_to_rf": "आपकी सभी खरीदारी रेफ्रिजरेटर में जोड़ दी गई हैं"
 }
