--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Hitung konsumsi daya dan air seluruh rumah setiap hari, bulan, dan tahun. Anda juga dapat melihat statistik konsumsi masing-masing perangkat, proporsi konsumsi energi setiap perangkat dalam periode yang dipilih, konsumsi energi keseluruhan dan individual.",
     "smart_support_helps_3": "3. Penyelesaian masalah",
     "CL_SL_CM_about_usage_month_desc": "Data yang ditampilkan merupakan estimasi, bukan pengukuran yang tepat.\n Perkiraan kami didasarkan pada pengujian yang terkendali, sehingga hasil aktual Anda mungkin berbeda.\n Penggunaan energi di dunia nyata bergantung pada lingkungan dan kebiasaan spesifik Anda.",
-    "CL_CF_HP_no_card_key": "Tidak Ada Kartu"
+    "CL_CF_HP_no_card_key": "Tidak Ada Kartu",
+    "CL_CF_TV_new_to_connectlife": "BARU DI CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Pindai dengan aplikasi seluler ConnectLife",
+    "CL_CF_AS_or": "atau",
+    "CL_CF_AS_report_an_issue": "laporkan masalah.",
+    "CL_DV_OV_adjust_time": "Sesuaikan waktu",
+    "CL_CF_CS_window_air_blue_cs_1": "Tekan dan tahan tombol #### selama sekitar 3-6 detik hingga Anda mendengar bunyi bip.",
+    "CL_CF_CS_window_air_blue_cs_2": "Pastikan layar perangkat menunjukkan \"77\", yang menunjukkan unit dalam mode berpasangan. Jika tidak, ulangi langkah 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Tekan dan tahan tombol \"CONNECT\" selama sekitar 6 detik. Unit akan berbunyi bip dan lampu Wi-Fi akan mulai berkedip.",
+    "CL_CF_HP_discover": "Menemukan",
+    "CL_DV_HOB_cooking_assist": "Bantuan Memasak",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "PILIH MODEL PERANGKAT",
+    "CL_CF_FM_all_purchases_added_to_rf": "Semua pembelian Anda telah ditambahkan ke lemari es"
 }
