--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Күнделікті, айлық және жылдық негізде бүкіл үй қуаты мен суды тұтынуды есептеңіз. Сондай-ақ жеке құрылғылардың тұтыну статистикасын, таңдалған кезеңдегі әрбір құрылғының қуат тұтыну үлесін, жалпы және жеке қуат тұтынуын көруге болады.",
     "smart_support_helps_3": "3. Ақаулық себебін іздеу және түзету",
     "CL_SL_CM_about_usage_month_desc": "Көрсетілген деректер нақты өлшемдер емес, бағалаулар болып табылады.\n Біздің бағалауларымыз бақыланатын сынақтарға негізделген, сондықтан сіздің нақты нәтижелеріңіз әртүрлі болуы мүмкін.\n Нақты әлемдегі энергияны пайдалану сіздің нақты ортаңызға және әдеттеріңізге байланысты.",
-    "CL_CF_HP_no_card_key": "Карта жоқ"
+    "CL_CF_HP_no_card_key": "Карта жоқ",
+    "CL_CF_TV_new_to_connectlife": "CONNECTLIFE ҮШІН ЖАҢА",
+    "CL_CF_TV_scan_with_cl": "ConnectLife мобильді қолданбасымен сканерлеңіз",
+    "CL_CF_AS_or": "немесе",
+    "CL_CF_AS_report_an_issue": "мәселені хабарлау.",
+    "CL_DV_OV_adjust_time": "Уақытты реттеңіз",
+    "CL_CF_CS_window_air_blue_cs_1": "#### түймесін шамамен басып тұрыңыз. Дыбыстық сигнал естілгенше 3-6 секунд.",
+    "CL_CF_CS_window_air_blue_cs_2": "Құрылғының дисплейінде құрылғының жұптастыру режимінде екенін көрсететін «77» көрсетілуін тексеріңіз. Олай болмаса, 2-қадамды қайталаңыз.",
+    "CL_CF_CS_window_ac_normal_step_2": "\"ҚОСЫЛУ\" түймесін шамамен басып тұрыңыз. 6 сек. Құрылғы дыбыстық сигнал беруі керек және Wi-Fi шамы жыпылықтай бастауы керек.",
+    "CL_CF_HP_discover": "Ашу",
+    "CL_DV_HOB_cooking_assist": "Пісіруге көмекші",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ҚҰРЫЛҒЫ МОДЕЛІН ТАҢДАҢЫЗ",
+    "CL_CF_FM_all_purchases_added_to_rf": "Барлық сатып алуларыңыз тоңазытқышқа қосылды"
 }
