--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Рассчитать потребление электроэнергии и воды по всему дому на ежедневной, ежемесячной и ежегодной основе. Вы также можете просмотреть статистику потребления отдельных устройств, долю потребления энергии каждым устройством в течение выбранного периода, общее и индивидуальное потребление энергии.",
     "smart_support_helps_3": "3. Поиск неисправностей",
     "CL_SL_CM_about_usage_month_desc": "Приведенные данные являются оценочными, а не точными измерениями.\n Наши оценки основаны на контролируемых испытаниях, поэтому ваши фактические результаты могут отличаться.\n Реальное потребление энергии зависит от ваших конкретных условий и привычек.",
-    "CL_CF_HP_no_card_key": "Нет карты"
+    "CL_CF_HP_no_card_key": "Нет карты",
+    "CL_CF_TV_new_to_connectlife": "НОВОЕ В CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Сканируйте с помощью мобильного приложения ConnectLife",
+    "CL_CF_AS_or": "или",
+    "CL_CF_AS_report_an_issue": "сообщить о проблеме.",
+    "CL_DV_OV_adjust_time": "Настроить время",
+    "CL_CF_CS_window_air_blue_cs_1": "Нажмите и удерживайте кнопку #### примерно 3–6 секунд, пока не услышите звуковой сигнал.",
+    "CL_CF_CS_window_air_blue_cs_2": "Убедитесь, что на дисплее устройства отображается «77», что означает, что устройство находится в режиме сопряжения. Если нет, повторите шаг 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Нажмите и удерживайте примерно 6 секунд значок ##. Должен раздастся звуковой сигнал, и должен начать мигать индикатор Wi-Fi.",
+    "CL_CF_HP_discover": "Обнаружить",
+    "CL_DV_HOB_cooking_assist": "Помощь в приготовлении пищи",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ВЫБЕРИТЕ МОДЕЛЬ УСТРОЙСТВА",
+    "CL_CF_FM_all_purchases_added_to_rf": "Все ваши покупки добавлены в холодильник."
 }
