--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Розрахуйте загальне споживання електроенергії та води в будинку на щоденній, місячній та річній основі. Ви також можете переглянути статистику споживання окремих пристроїв, частку споживання енергії кожним пристроєм за вибраний період, загальне та індивідуальне споживання енергії.",
     "smart_support_helps_3": "3. Вирішення проблем",
     "CL_SL_CM_about_usage_month_desc": "Наведені дані є приблизними, а не точними вимірюваннями.\n Наші оцінки базуються на контрольованих тестах, тому ваші фактичні результати можуть відрізнятися.\n Реальне використання енергії залежить від вашого середовища та звичок.",
-    "CL_CF_HP_no_card_key": "Без картки"
+    "CL_CF_HP_no_card_key": "Без картки",
+    "CL_CF_TV_new_to_connectlife": "НОВИНКА В CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Скануйте за допомогою мобільного додатку ConnectLife",
+    "CL_CF_AS_or": "або",
+    "CL_CF_AS_report_an_issue": "повідомити про проблему.",
+    "CL_DV_OV_adjust_time": "Відрегулюйте час",
+    "CL_CF_CS_window_air_blue_cs_1": "Натисніть і утримуйте кнопку #### прибл. 3-6 секунд, поки не почуєте звуковий сигнал.",
+    "CL_CF_CS_window_air_blue_cs_2": "Переконайтеся, що на дисплеї пристрою відображається «77», що означає, що пристрій перебуває в режимі сполучення. Якщо ні, повторіть крок 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Натисніть і утримуйте піктограму ## протягом приблизно 6 секунд. Пристрій має подати звуковий сигнал, а індикатор Wi-Fi заблимає.",
+    "CL_CF_HP_discover": "Відкрийте для себе",
+    "CL_DV_HOB_cooking_assist": "Помічник у кулінарії",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ОБЕРІТЬ МОДЕЛЬ ПРИСТРОЮ",
+    "CL_CF_FM_all_purchases_added_to_rf": "Усі ваші покупки додано в холодильник"
 }
