--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Laske koko talon sähkön- ja vedenkulutus päivittäin, kuukausittain ja vuosittain. Näet myös yksittäisten laitteiden kulutustilastot, kunkin laitteen energiankulutuksen osuuden valitulla ajanjaksolla, kokonais- ja yksittäisen energiankulutuksen.",
     "smart_support_helps_3": "3. Vianetsintä",
     "CL_SL_CM_about_usage_month_desc": "Esitetyt tiedot ovat arvioita, eivät tarkkoja mittoja.\n Arviomme perustuvat kontrolloituihin testeihin, joten todelliset tulokset voivat vaihdella.\n Todellinen energiankäyttö riippuu erityisestä ympäristöstäsi ja tavoistasi.",
-    "CL_CF_HP_no_card_key": "Ei korttia"
+    "CL_CF_HP_no_card_key": "Ei korttia",
+    "CL_CF_TV_new_to_connectlife": "UUTTA YHTEYDESSÄ",
+    "CL_CF_TV_scan_with_cl": "Skannaa ConnectLife-mobiilisovelluksella",
+    "CL_CF_AS_or": "tai",
+    "CL_CF_AS_report_an_issue": "ilmoita ongelmasta.",
+    "CL_DV_OV_adjust_time": "Säädä aika",
+    "CL_CF_CS_window_air_blue_cs_1": "Paina ja pidä painettuna ####-painiketta n. 3-6 sekuntia, kunnes kuulet äänimerkin.",
+    "CL_CF_CS_window_air_blue_cs_2": "Tarkista, että laitteen näytössä näkyy \"77\", mikä tarkoittaa, että laite on pariliitostilassa. Jos ei, toista vaihe 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Pidä ##-kuvaketta painettuna n. 6 sekuntia. Laitteen pitäisi piippata ja Wi-Fi-valon pitäisi alkaa vilkkua.",
+    "CL_CF_HP_discover": "Tutustu",
+    "CL_DV_HOB_cooking_assist": "Ruoanlaittoapu",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "VALITSE LAITEMALLI",
+    "CL_CF_FM_all_purchases_added_to_rf": "Kaikki ostoksesi on lisätty jääkaappiin"
 }
