--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Calcola il consumo di energia e acqua dell'intera casa su base giornaliera, mensile e annuale. Puoi anche visualizzare le statistiche di consumo dei singoli dispositivi, la percentuale di consumo energetico di ciascun dispositivo nel periodo selezionato, il consumo energetico complessivo e individuale.",
     "smart_support_helps_3": "3. Risoluzione dei problemi",
     "CL_SL_CM_about_usage_month_desc": "I dati indicati sono stime, non misurazioni esatte.\n Le nostre stime si basano su test controllati, pertanto i risultati effettivi potrebbero variare.\n Il consumo energetico nel mondo reale dipende dall'ambiente e dalle abitudini specifiche.",
-    "CL_CF_HP_no_card_key": "Nessuna carta"
+    "CL_CF_HP_no_card_key": "Nessuna carta",
+    "CL_CF_TV_new_to_connectlife": "NUOVO SU CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Scansiona con l'app mobile ConnectLife",
+    "CL_CF_AS_or": "O",
+    "CL_CF_AS_report_an_issue": "segnala un problema.",
+    "CL_DV_OV_adjust_time": "Regola il tempo",
+    "CL_CF_CS_window_air_blue_cs_1": "Tenere premuto il pulsante #### per circa 3-6 secondi finché non si sente un segnale acustico.",
+    "CL_CF_CS_window_air_blue_cs_2": "Controllare che il display del dispositivo mostri \"77\", indicando che l'unità è in modalità di associazione. In caso contrario, ripetere il passaggio 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Tieni premuta l'icona ## per ca. 6 sec. L'unità dovrebbe emettere un segnale acustico e la spia Wi-Fi dovrebbe iniziare a lampeggiare.",
+    "CL_CF_HP_discover": "Scoprire",
+    "CL_DV_HOB_cooking_assist": "Aiuto in cucina",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "SCEGLI IL MODELLO DEL DISPOSITIVO",
+    "CL_CF_FM_all_purchases_added_to_rf": "Tutti i tuoi acquisti sono stati aggiunti al frigorifero"
 }
