--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Пресметајте ја потрошувачката на енергија и вода во целата куќа на дневна, месечна и годишна основа. Можете исто така да ја видите статистиката за потрошувачка на поединечни уреди, процентот на потрошувачка на енергија на секој уред во избраниот период, вкупната и индивидуалната потрошувачка на енергија.",
     "smart_support_helps_3": "3. Решавање проблеми",
     "CL_SL_CM_about_usage_month_desc": "Прикажаните податоци се проценки, а не точни мерења.\n Нашите проценки се засноваат на контролирани тестови, така што вашите вистински резултати може да се разликуваат.\n Употребата на енергија во реалниот свет зависи од вашата специфична околина и навики.",
-    "CL_CF_HP_no_card_key": "Нема картичка"
+    "CL_CF_HP_no_card_key": "Нема картичка",
+    "CL_CF_TV_new_to_connectlife": "НОВО ЗА ПОВРЗУВАЊЕ LIFE",
+    "CL_CF_TV_scan_with_cl": "Скенирајте со мобилната апликација ConnectLife",
+    "CL_CF_AS_or": "или",
+    "CL_CF_AS_report_an_issue": "пријави проблем.",
+    "CL_DV_OV_adjust_time": "Прилагодете го времето",
+    "CL_CF_CS_window_air_blue_cs_1": "Притиснете и задржете го копчето #### прибл. 3-6 секунди додека не слушнете звучен сигнал.",
+    "CL_CF_CS_window_air_blue_cs_2": "Проверете дали екранот на уредот покажува „77“, што покажува дека уредот е во режим на спарување. Ако не, повторете го чекор 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Притиснете и задржете го копчето „CONNECT“ околу. 6 секунди. Уредот треба да сигнализира и светилката за Wi-Fi треба да почне да трепка.",
+    "CL_CF_HP_discover": "Откријте",
+    "CL_DV_HOB_cooking_assist": "Помош при готвење",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ИЗБЕРЕТЕ ГО МОДЕЛОТ НА УРЕДОТ",
+    "CL_CF_FM_all_purchases_added_to_rf": "Сите ваши набавки се додадени во фрижидерот"
 }
