--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Kira tenaga dan penggunaan air seluruh rumah pada asas harian, bulanan dan tahunan. Anda juga boleh melihat statistik penggunaan peranti individu, perkadaran penggunaan tenaga setiap peranti dalam tempoh yang dipilih, penggunaan tenaga keseluruhan dan individu.",
     "smart_support_helps_3": "3. Penyelesaian masalah",
     "CL_SL_CM_about_usage_month_desc": "Data yang ditunjukkan adalah anggaran, bukan ukuran tepat.\n Anggaran kami adalah berdasarkan ujian terkawal, jadi keputusan sebenar anda mungkin berbeza-beza.\n Penggunaan tenaga dunia sebenar bergantung pada persekitaran dan tabiat khusus anda.",
-    "CL_CF_HP_no_card_key": "Tiada Kad"
+    "CL_CF_HP_no_card_key": "Tiada Kad",
+    "CL_CF_TV_new_to_connectlife": "BARU UNTUK CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Imbas dengan apl mudah alih ConnectLife",
+    "CL_CF_AS_or": "atau",
+    "CL_CF_AS_report_an_issue": "melaporkan sesuatu isu.",
+    "CL_DV_OV_adjust_time": "Laraskan masa",
+    "CL_CF_CS_window_air_blue_cs_1": "Tekan dan tahan butang #### untuk lebih kurang. 3-6 saat sehingga anda mendengar bunyi bip.",
+    "CL_CF_CS_window_air_blue_cs_2": "Semak bahawa paparan peranti menunjukkan \"77\", menunjukkan unit berada dalam mod berpasangan. Jika tidak, sila ulangi langkah 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Tekan & tahan butang \"CONNECT\" untuk lebih kurang. 6 saat. Unit harus berbunyi bip & lampu Wi-Fi akan mula berkelip.",
+    "CL_CF_HP_discover": "Temui",
+    "CL_DV_HOB_cooking_assist": "Bantuan Memasak",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "PILIH MODEL PERANTI",
+    "CL_CF_FM_all_purchases_added_to_rf": "Semua pembelian anda telah ditambahkan ke dalam peti sejuk"
 }
