--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "Израчунајте потрошњу струје и воде у целој кући на дневној, месечној и годишњој бази. Такође можете погледати статистику потрошње појединих уређаја, пропорцију потрошње енергије сваког уређаја у одабраном периоду, укупну и појединачну потрошњу енергије.",
     "smart_support_helps_3": "3. Отклањање проблема",
     "CL_SL_CM_about_usage_month_desc": "Приказани подаци су процене, а не тачна мерења.\n Наше процене су засноване на контролисаним тестовима, тако да ваши стварни резултати могу да варирају.\n Коришћење енергије у стварном свету зависи од вашег специфичног окружења и навика.",
-    "CL_CF_HP_no_card_key": "Но Цард"
+    "CL_CF_HP_no_card_key": "Но Цард",
+    "CL_CF_TV_new_to_connectlife": "НОВО ЗА ЦОННЕЦТЛИФЕ",
+    "CL_CF_TV_scan_with_cl": "Скенирајте помоћу мобилне апликације ЦоннецтЛифе",
+    "CL_CF_AS_or": "или",
+    "CL_CF_AS_report_an_issue": "пријави проблем.",
+    "CL_DV_OV_adjust_time": "Подесите време",
+    "CL_CF_CS_window_air_blue_cs_1": "Притисните и држите дугме #### отприлике. 3-6 секунди док не чујете звучни сигнал.",
+    "CL_CF_CS_window_air_blue_cs_2": "Проверите да ли се на екрану уређаја приказује „77“, што указује да је јединица у режиму упаривања. Ако не, поновите корак 2.",
+    "CL_CF_CS_window_ac_normal_step_2": "Притисните и држите икону ## око 6 секунди. Уређај би требало да огласи звучни сигнал, а Wi-Fi лампица да почне да трепће.",
+    "CL_CF_HP_discover": "Откријте",
+    "CL_DV_HOB_cooking_assist": "Цоокинг Ассист",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ИЗАБЕРИТЕ МОДЕЛ УРЕЂАЈА",
+    "CL_CF_FM_all_purchases_added_to_rf": "Све ваше куповине су додате у фрижидер"
 }
