--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4620,5 +4620,17 @@
     "smart_energy_helps_2_content": "คำนวณการใช้พลังงานและน้ำของทั้งบ้านในแต่ละวัน รายเดือน และรายปี นอกจากนี้คุณยังสามารถดูสถิติการใช้พลังงานของแต่ละอุปกรณ์ สัดส่วนการใช้พลังงานของแต่ละอุปกรณ์ภายในช่วงเวลาที่เลือก การใช้พลังงานโดยรวมและแต่ละอุปกรณ์",
     "smart_support_helps_3": "3. การแก้ไขปัญหา",
     "CL_SL_CM_about_usage_month_desc": "ข้อมูลที่แสดงนั้นเป็นค่าประมาณ ไม่ใช่การวัดที่แน่นอน\n การประมาณการของเราขึ้นอยู่กับการทดสอบที่มีการควบคุม ดังนั้นผลลัพธ์จริงของคุณอาจแตกต่างกันไป\n การใช้พลังงานในโลกแห่งความเป็นจริงขึ้นอยู่กับสภาพแวดล้อมและนิสัยเฉพาะของคุณ",
-    "CL_CF_HP_no_card_key": "ไม่มีบัตร"
+    "CL_CF_HP_no_card_key": "ไม่มีบัตร",
+    "CL_CF_TV_new_to_connectlife": "ใหม่ใน CONNECTLife",
+    "CL_CF_TV_scan_with_cl": "สแกนด้วยแอปมือถือ ConnectLife",
+    "CL_CF_AS_or": "หรือ",
+    "CL_CF_AS_report_an_issue": "รายงานปัญหา.",
+    "CL_DV_OV_adjust_time": "ปรับเวลา",
+    "CL_CF_CS_window_air_blue_cs_1": "กดปุ่ม #### ค้างไว้ประมาณ 3-6 วินาทีจนกว่าจะได้ยินเสียงบี๊บ",
+    "CL_CF_CS_window_air_blue_cs_2": "ตรวจสอบว่าหน้าจออุปกรณ์แสดง \"77\" ซึ่งแสดงว่าอุปกรณ์อยู่ในโหมดจับคู่ หากไม่เป็นเช่นนั้น โปรดทำซ้ำขั้นตอนที่ 2",
+    "CL_CF_CS_window_ac_normal_step_2": "กดปุ่ม \"เชื่อมต่อ\" ค้างไว้ประมาณ 6 วินาที อุปกรณ์จะส่งเสียงบี๊บและไฟ Wi-Fi จะเริ่มกะพริบ",
+    "CL_CF_HP_discover": "ค้นพบ",
+    "CL_DV_HOB_cooking_assist": "เครื่องช่วยประกอบอาหาร",
+    "CL_CF_CS_tuya_dehumidifier_choose_device_model": "เลือกรุ่นอุปกรณ์",
+    "CL_CF_FM_all_purchases_added_to_rf": "การซื้อทั้งหมดของคุณถูกเพิ่มลงในตู้เย็นแล้ว"
 }
